src/core/poParser.cpp
#include "poParser.h"
#include "poAST.h"

#include <assert.h>

using namespace po;

poParser::poParser(const std::vector<poToken>& tokens)
    :
    _tokens(tokens),
    _pos(0),
    _error(false),
    _line(0),
    _col(0)
{
}

bool poParser::match(poTokenType type) const
{
    return !eof() && _tokens[_pos].token() == type;
}

bool poParser::matchPrimitiveType() const
{
    if (eof())
    {
        return false;
    }

    poTokenType type = _tokens[_pos].token();

    return type == poTokenType::BOOLEAN || type == poTokenType::U16_TYPE ||
        type == poTokenType::I16_TYPE || type == poTokenType::I32_TYPE ||
        type == poTokenType::I64_TYPE || type == poTokenType::I8_TYPE ||
        type == poTokenType::U32_TYPE || type == poTokenType::U64_TYPE ||
        type == poTokenType::U8_TYPE || type == poTokenType::F32_TYPE ||
        type == poTokenType::F64_TYPE;
}

bool poParser::lookahead(const poTokenType type, const int amount)
{
    return !(_pos + amount + 1 >= int(_tokens.size())) && _tokens[_pos + amount + 1].token() == type;
}

void poParser::advance()
{
    _pos++;
}

const poToken& poParser::peek()
{
    return _tokens[_pos];
}

void poParser::setError(const std::string& text)
{
    if (!_error)
    {
        _error = true;
        _errorText = text;

        if (eof())
        {
            _line = _tokens[_tokens.size() - 1].line();
            _col = _tokens[_tokens.size() - 1].column();
        }
        else
        {
            _line = _tokens[_pos].line();
            _col = _tokens[_pos].column();
        }
    }
}

bool poParser::eof() const
{
    return _pos >= int(_tokens.size());
}

const int poParser::parsePointer()
{
    int pointerCount = 0;
    while (match(poTokenType::STAR))
    {
        // pointer
        advance();
        pointerCount++;
    }
    return pointerCount;
}

poNode* poParser::parseConstraint(poNode* param, bool& expectRightShift)
{
    if (match(poTokenType::COLON)) {
        advance();
        if (match(poTokenType::IDENTIFIER) ||
            match(poTokenType::NEW)) {
            poToken identifier = peek();
            advance();

            std::vector<poNode*> nodes;
            if (match(poTokenType::LESS)) {
                advance();
                if (match(poTokenType::IDENTIFIER)) {
                    poToken type = peek();
                    advance();
                    nodes.push_back(new poNode(poNodeType::TYPE, type));

                    while (match(poTokenType::COMMA)) {
                        advance();
                        poToken nextType = peek();
                        nodes.push_back(new poNode(poNodeType::TYPE, nextType));
                        advance();
                    }

                    if (match(poTokenType::GREATER)) {
                        advance();
                    } else if (match(poTokenType::RIGHT_SHIFT)) {
                        expectRightShift = true;
                    } else {
                        setError("Expected end of generic definition.");
                    }
                }
                else {
                    setError("Expected identifier.");
                }
            }

            if (nodes.size() > 0) {
                param = new poUnaryNode(poNodeType::CONSTRAINT,
                    new poGenericNode(param, nodes, identifier),
                    identifier);
            } else {
                param = new poUnaryNode(poNodeType::CONSTRAINT, param, identifier);
            }
        }
        else {
            setError("Expected identifier in type constraint.");
        }
    }

    return param;
}

void poParser::parseGeneric(const poGenericType type, std::vector<poNode*>& parameters)
{
    // Generic type
    poToken name = peek();
    advance();

    poNode* param = new poNode(poNodeType::TYPE, peek());
    advance();

    bool expectRightShift = false;
    int count = 0;
    switch (type) {
    case poGenericType::CLASS:
        param = parseConstraint(param, expectRightShift);
        break;
    case poGenericType::VARIABLE:
        count = parsePointer();
        break;
    }

    if (count > 0) {
        param = new poPointerNode(poNodeType::POINTER, param, name, count);
    }

    parameters.push_back(param);
    while (match(poTokenType::COMMA) && !eof() && !isError() && !expectRightShift)
    {
        advance();

        if (match(poTokenType::IDENTIFIER) ||
            matchPrimitiveType())
        {
            poToken parameter = peek();
            param = new poNode(poNodeType::TYPE, parameter);
            advance();

            count = 0;
            switch (type) {
            case poGenericType::CLASS:
                param = parseConstraint(param, expectRightShift);
                break;
            case poGenericType::VARIABLE:
                count = parsePointer();
                break;
            }

            if (count > 0) {
                param = new poPointerNode(poNodeType::POINTER, param, name, count);
            }
            parameters.push_back(param);
        }
        else { setError("Expected identifier"); }
    }

    if (int(parameters.size()) == 0) {
        setError("No parameters specified in the generic");
    }

    if ((expectRightShift && match(poTokenType::RIGHT_SHIFT)) ||
        (!expectRightShift && match(poTokenType::GREATER)))
    {
        advance();
    }
    else
    {
        setError("Expected end of generic definition");
    }
}

//
// poFunctionParser
//

poFunctionParser::poFunctionParser(poParser& parser)
    :
    _parser(parser)
{
}

poNode* poFunctionParser::parseCall(const poToken& name)
{
    std::vector<poNode*> nodes;

    if (!_parser.match(poTokenType::CLOSE_PARAN))
    {
        poNode* node = parseTerm();
        if (node)
        {
            nodes.push_back(node);
            while (_parser.match(poTokenType::COMMA))
            {
                _parser.advance();
                nodes.push_back(parseTerm());
            }
        }
    }

    return new poListNode(poNodeType::CALL,
        nodes,
        name);
}

poNode* poFunctionParser::parseMember(poNode* variable, const poToken& token)
{
    poNode* node = variable;
    while (_parser.match(poTokenType::DOT))
    {
        _parser.advance();
        const poToken& next = _parser.peek();
        _parser.advance();
        if (_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.advance();
            node = new poBinaryNode(poNodeType::MEMBER_CALL, node, parseCall(next), next);
            if (_parser.match(poTokenType::CLOSE_PARAN))
            {
                _parser.advance();
            }
            else
            {
                _parser.setError("Unexpected token.");
            }
        }
        else if (_parser.match(poTokenType::OPEN_BRACKET))
        {
            _parser.advance();

            poNode* accessor = parseExpression();

            if (_parser.match(poTokenType::CLOSE_BRACKET))
            {
                _parser.advance();

                node = new poUnaryNode(poNodeType::MEMBER, node, next);
                node = new poArrayAccessor(accessor, node, poNodeType::ARRAY_ACCESSOR, token);
            }
            else
            {
                _parser.setError("Unexpected token.");
            }
        }
        else
        {
            node = new poUnaryNode(poNodeType::MEMBER, node, next);
        }
    }

    if (node->type() == poNodeType::ARRAY_ACCESSOR)
    {
        poArrayAccessor* accessor = static_cast<poArrayAccessor*>(node);
        accessor->setDereference(true);
    }

    return node;
}

poNode* poFunctionParser::parsePrimary()
{
    poNode* node = nullptr;
    if (_parser.match(poTokenType::TRUE) ||
        _parser.match(poTokenType::FALSE) ||
        _parser.match(poTokenType::F32) ||
        _parser.match(poTokenType::F64) ||
        _parser.match(poTokenType::I32) ||
        _parser.match(poTokenType::I64) ||
        _parser.match(poTokenType::I8) ||
        _parser.match(poTokenType::I16) ||
        _parser.match(poTokenType::U32) ||
        _parser.match(poTokenType::U64) ||
        _parser.match(poTokenType::U8) ||
        _parser.match(poTokenType::U16) ||
        _parser.match(poTokenType::STRING) ||
        _parser.match(poTokenType::CHAR))
    {
        auto& token = _parser.peek();
        _parser.advance();
        node = new poConstantNode(poNodeType::CONSTANT, token);
    }
    else if (_parser.match(poTokenType::NEW))
    {
        _parser.advance();
        
        const poToken& token = _parser.peek();
        _parser.advance();

        if (_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.advance();

            // constructor?
            std::vector<poNode*> args;
            if (!_parser.match(poTokenType::CLOSE_PARAN))
            {
                poNode* node = parseTerm();
                if (node)
                {
                    args.push_back(node);
                    while (_parser.match(poTokenType::COMMA))
                    {
                        _parser.advance();
                        args.push_back(parseTerm());
                    }
                }
            }

            poListNode* argsNode = new poListNode(poNodeType::CALL, args, token);
            std::vector<poNode*> constructor = {
                argsNode
            };

            node = new poUnaryNode(poNodeType::NEW,
                new poListNode(poNodeType::CONSTRUCTOR, constructor, token),
                token);

            if (_parser.match(poTokenType::CLOSE_PARAN))
            {
                _parser.advance();
            }
            else
            {
                _parser.setError("Expected closing parenthesis.");
            }
        }
        else if (_parser.match(poTokenType::OPEN_BRACKET))
        {
            _parser.advance();

            poNode* sizeExpr = parseExpression();
            if (_parser.match(poTokenType::CLOSE_BRACKET))
            {
                _parser.advance();
                
                poNode* type = new poNode(poNodeType::TYPE, token);

                node = new poUnaryNode(poNodeType::NEW,
                    new poBinaryNode(poNodeType::DYNAMIC_ARRAY,
                        sizeExpr,
                        type,
                        token),
                    token);
            }
            else
            {
                _parser.setError("Expected closing bracket.");
            }
        }
        else
        {
            _parser.setError("Ill formed 'new' keyword usage.");
        }
    }
    else if (_parser.match(poTokenType::SIZEOF))
    {
        auto& token = _parser.peek();
        _parser.advance();

        if (_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.advance();

            if (_parser.match(poTokenType::IDENTIFIER) || _parser.matchPrimitiveType())
            {
                auto& typeToken = _parser.peek();
                _parser.advance();
                const int pointerCount = _parser.parsePointer();

                if (_parser.match(poTokenType::CLOSE_PARAN))
                {
                    _parser.advance();

                    if (pointerCount == 0)
                    {
                        node = new poUnaryNode(poNodeType::SIZEOF, new poNode(poNodeType::TYPE, typeToken), token);
                    }
                    else
                    {
                        node = new poUnaryNode(poNodeType::SIZEOF,
                            new poPointerNode(poNodeType::POINTER,
                                new poNode(poNodeType::TYPE, typeToken),
                                typeToken,
                                pointerCount),
                            token);
                    }
                }
                else
                {
                    _parser.setError("Expected closing parenthesis.");
                }
            }
            else
            {
                _parser.setError("Expected a type or identifier after 'sizeof'.");
            }
        }
        else
        {
            _parser.setError("Expected opening parenthesis after 'sizeof'.");
        }
    }
    else if (_parser.match(poTokenType::NULLPTR))
    {
        auto& token = _parser.peek();
        _parser.advance();
        node = new poNode(poNodeType::NULLPTR, token);
    }
    else if (_parser.match(poTokenType::IDENTIFIER))
    {
        const poToken token = _parser.peek();
        _parser.advance();

        if (_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.advance();
            node = parseCall(token);

            if (_parser.match(poTokenType::CLOSE_PARAN))
            {
                _parser.advance();
            }
            else
            {
                _parser.setError("Unexpected token.");
            }
        }
        else if (_parser.match(poTokenType::OPEN_BRACKET))
        {
            _parser.advance();

            poNode* accessor = parseExpression();

            if (_parser.match(poTokenType::CLOSE_BRACKET))
            {
                _parser.advance();

                poArrayAccessor* arrayNode= new poArrayAccessor(accessor, new poNode(poNodeType::VARIABLE, token), poNodeType::ARRAY_ACCESSOR, token);
                arrayNode->setDereference(true);
                node = arrayNode;
            }
            else
            {
                _parser.setError("Unexpected token.");
            }

            if (_parser.match(poTokenType::DOT))
            {
                node = parseMember(node, token);
            }
        }
        else if (_parser.match(poTokenType::DOT))
        {
            node = parseMember(new poNode(poNodeType::VARIABLE, token), token);
        }
        else if (_parser.match(poTokenType::RESOLVER))
        {
            std::vector<std::string> path;
            path.push_back(token.string());
            while (_parser.match(poTokenType::RESOLVER))
            {
                _parser.advance();
                if (_parser.match(poTokenType::IDENTIFIER))
                {
                    const poToken& next = _parser.peek();
                    path.push_back(next.string());
                    _parser.advance();
                }
                else
                {
                    _parser.setError("Expected identifier after resolver operator.");
                    break;
                }
            }
            node = new poResolverNode(token, path);
        }
        else
        {
            node = new poNode(poNodeType::VARIABLE, token);
        }
    }
    else if (_parser.match(poTokenType::OPEN_PARAN))
    {
        _parser.advance();

        bool isCast = false;
        if (_parser.match(poTokenType::IDENTIFIER) ||
            _parser.matchPrimitiveType())
        {
            /* We are potentially a cast operator */

            if (_parser.lookahead(poTokenType::CLOSE_PARAN, 0))
            {
                isCast = true;

                auto& token = _parser.peek();
                _parser.advance();

                if (_parser.match(poTokenType::CLOSE_PARAN))
                {
                    _parser.advance();

                    poNode* castExpr = nullptr;
                    if (_parser.match(poTokenType::OPEN_PARAN))
                    {
                        castExpr = parseExpression();
                    }
                    else
                    {
                        castExpr = parsePrimary();
                    }
                    
                    node = new poBinaryNode(poNodeType::CAST,
                            new poNode(poNodeType::TYPE, token), castExpr,
                            token);
                }
            }
            else if (_parser.lookahead(poTokenType::STAR, 0) &&
                (_parser.lookahead(poTokenType::CLOSE_PARAN, 1) || _parser.lookahead(poTokenType::STAR, 1)))
            {
                isCast = true; /* Cast to a pointer */

                auto& token = _parser.peek();
                _parser.advance();

                const int pointerCount = parsePointer();

                if (_parser.match(poTokenType::CLOSE_PARAN))
                {
                    _parser.advance();

                    poNode* castExpr = nullptr;
                    if (_parser.match(poTokenType::OPEN_PARAN))
                    {
                        castExpr = parseExpression();
                    }
                    else
                    {
                        castExpr = parsePrimary();
                    }

                    node = new poBinaryNode(poNodeType::CAST,
                            new poPointerNode(poNodeType::POINTER, new poNode(poNodeType::TYPE, token), token, pointerCount),
                        castExpr,
                        token);
                }
            }
            else if (_parser.lookahead(poTokenType::OPEN_BRACKET, 0))
            {
                isCast = true; /* Cast to an array */

                auto& token = _parser.peek();
                _parser.advance();

                if (_parser.match(poTokenType::OPEN_BRACKET))
                {
                    _parser.advance();
                }

                if (!_parser.isError() && _parser.match(poTokenType::I64))
                {
                    auto& size = _parser.peek();
                    _parser.advance();

                    if (_parser.match(poTokenType::CLOSE_BRACKET))
                    {
                        _parser.advance();
                    }

                    if (!_parser.isError() && _parser.match(poTokenType::CLOSE_PARAN))
                    {
                        _parser.advance();

                        node = new poBinaryNode(poNodeType::CAST, 
                            new poArrayNode(size.i64(), new poNode(poNodeType::TYPE, token), poNodeType::ARRAY, token),
                            parseExpression(),
                            token);
                    }
                }
            }
        }

        if (!isCast)
        {
            node = parseExpression();

            if (_parser.match(poTokenType::CLOSE_PARAN))
            {
                _parser.advance();
            }
        }
    }
    else
    {
        _parser.setError("Unexpected token.");
    }
    return node;
}

poNode* poFunctionParser::parseUnary()
{
    if (_parser.match(poTokenType::MINUS))
    {
        poToken token = _parser.peek();
        _parser.advance();
        return new poUnaryNode(poNodeType::UNARY_SUB, parsePrimary(), token);
    }
    else if (_parser.match(poTokenType::AMPERSAND))
    {
        poToken token = _parser.peek();
        _parser.advance();
        if (_parser.match(poTokenType::IDENTIFIER))
        {
            poNode* node = parsePrimary();
            if (node->type() == poNodeType::ARRAY_ACCESSOR)
            {
                poArrayAccessor* accessor = static_cast<poArrayAccessor*>(node);
                accessor->setDereference(false);
            }

            return new poUnaryNode(poNodeType::REFERENCE, 
                node,
                token);
        }
        else
        {
            _parser.setError("Expected an identifier.");
        }
    }
    else if (_parser.match(poTokenType::STAR))
    {
        poToken token = _parser.peek();
        _parser.advance();
        if (_parser.match(poTokenType::IDENTIFIER))
        {
            poToken variable = _parser.peek();
            _parser.advance();

            return new poUnaryNode(poNodeType::DEREFERENCE,
                new poNode(poNodeType::VARIABLE, variable),
                token);
        }
        else
        {
            _parser.setError("Expected an identifier.");
        }
    }

    return parsePrimary();
}

poNode* poFunctionParser::parseBitShift()
{
    poNode* node = parseUnary();
    while (_parser.match(poTokenType::LEFT_SHIFT) || _parser.match(poTokenType::RIGHT_SHIFT))
    {
        const poToken token = _parser.peek();
        _parser.advance();
        node = new poBinaryNode(
            token.token() == poTokenType::LEFT_SHIFT ? poNodeType::LEFT_SHIFT : poNodeType::RIGHT_SHIFT,
            node,
            parseUnary(),
            token);
    }

    return node;
}

poNode* poFunctionParser::parseFactor()
{
    poNode* node = parseBitShift();
    while (_parser.match(poTokenType::STAR) || _parser.match(poTokenType::SLASH) || _parser.match(poTokenType::MODULO))
    {
        const poToken token = _parser.peek();
        _parser.advance();
        poNodeType type = poNodeType::MUL;
        switch (token.token())
        {
        case poTokenType::STAR:
            type = poNodeType::MUL;
            break;
        case poTokenType::SLASH:
            type = poNodeType::DIV;
            break;
        case poTokenType::MODULO:
            type = poNodeType::MODULO;
            break;
        }

        node = new poBinaryNode(
            type,
            node,
            parseBitShift(),
            token);
    }

    return node;
}

poNode* poFunctionParser::parseTerm()
{
    poNode* node = parseFactor();
    while (_parser.match(poTokenType::PLUS) || _parser.match(poTokenType::MINUS))
    {
        const poToken token = _parser.peek();
        _parser.advance();
        node = new poBinaryNode(
            token.token() == poTokenType::PLUS ? poNodeType::ADD : poNodeType::SUB,
            node,
            parseFactor(),
            token);
    }

    return node;
}

poNode* poFunctionParser::parseEquality()
{
    poNode* node = parseTerm();
    while (_parser.match(poTokenType::EQUALS_EQUALS) ||
        _parser.match(poTokenType::NOT_EQUALS) ||
        _parser.match(poTokenType::LESS) ||
        _parser.match(poTokenType::GREATER) ||
        _parser.match(poTokenType::LESS_EQUALS) ||
        _parser.match(poTokenType::GREATER_EQUALS))
    {
        auto& token = _parser.peek();
        _parser.advance();

        poNodeType type = poNodeType::CMP_EQUALS;
        switch (token.token())
        {
        case poTokenType::EQUALS_EQUALS:
            type = poNodeType::CMP_EQUALS;
            break;
        case poTokenType::NOT_EQUALS:
            type = poNodeType::CMP_NOT_EQUALS;
            break;
        case poTokenType::LESS:
            type = poNodeType::CMP_LESS;
            break;
        case poTokenType::GREATER:
            type = poNodeType::CMP_GREATER;
            break;
        case poTokenType::LESS_EQUALS:
            type = poNodeType::CMP_LESS_EQUALS;
            break;
        case poTokenType::GREATER_EQUALS:
            type = poNodeType::CMP_GREATER_EQUALS;
            break;
        }

        node = new poBinaryNode(type,
            node,
            parseTerm(),
            token);
    }

    return node;
}

poNode* poFunctionParser::parseAnd()
{
    poNode* node = parseEquality();
    while (_parser.match(poTokenType::AND))
    {
        auto& token = _parser.peek();
        _parser.advance();

        node = new poBinaryNode(poNodeType::AND, node, parseEquality(), token);
    }

    return node;
}

poNode* poFunctionParser::parseOr()
{
    poNode* node = parseAnd();
    while (_parser.match(poTokenType::OR))
    {
        auto& token = _parser.peek();
        _parser.advance();

        node = new poBinaryNode(poNodeType::OR, node, parseAnd(), token);
    }

    return node;
}

poNode* poFunctionParser::parseExpression()
{
    return parseOr();
}

poNode* poFunctionParser::parseRH(poNode* lhs)
{
    poNode* node = nullptr;
    if (_parser.match(poTokenType::EQUALS))
    {
        auto& assign = _parser.peek();
        _parser.advance();

        node = new poBinaryNode(poNodeType::ASSIGNMENT,
            lhs,
            parseTerm(),
            assign);
    }
    else if (_parser.match(poTokenType::PLUS_EQUALS) ||
        _parser.match(poTokenType::MINUS_EQUALS) ||
        _parser.match(poTokenType::STAR_EQUALS) ||
        _parser.match(poTokenType::SLASH_EQUALS))
    {
        auto& assign = _parser.peek();
        _parser.advance();
        poNodeType type = poNodeType::ADD;
        switch (assign.token())
        {
        case poTokenType::PLUS_EQUALS:
            type = poNodeType::ADD;
            break;
        case poTokenType::MINUS_EQUALS:
            type = poNodeType::SUB;
            break;
        case poTokenType::STAR_EQUALS:
            type = poNodeType::MUL;
            break;
        case poTokenType::SLASH_EQUALS:
            type = poNodeType::DIV;
            break;
        default:
            _parser.setError("Unexpected token.");
            break;
        }

        if (!_parser.isError())
        {
            node = new poBinaryNode(poNodeType::ASSIGNMENT,
                lhs,
                new poBinaryNode(type,
                    lhs,
                    parseTerm(),
                    assign),
                assign);
        }
    }
    else
    {
        _parser.setError("Unexpected token.");
    }
    return node;
}

poNode* poFunctionParser::parseWhile()
{
    std::vector<poNode*> children;

    auto& whileStatement = _parser.peek();
    if (_parser.match(poTokenType::WHILE))
    {
        _parser.advance();
        if (!_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.setError("Expected open parenthesis.");
            return nullptr;
        }

        _parser.advance();

        poNode* equality = parseExpression();
        fixupExpression(equality);
        if (evaluateNeedsFixup(equality))
        {
            poNode* compare = insertCompare(equality);
            equality = compare;
        }

        if (!_parser.match(poTokenType::CLOSE_PARAN))
        {
            _parser.setError("Expected close parenthesis.");
            return nullptr;
        }
        _parser.advance();

        children.push_back(equality);

        if (!_parser.match(poTokenType::OPEN_BRACE))
        {
            _parser.setError("Expected open brace.");
            return nullptr;
        }

        poNode* body = parseBody(true);
        children.push_back(body);

        if (!_parser.match(poTokenType::CLOSE_BRACE))
        {
            _parser.setError("Expected close brace.");
            return nullptr;
        }
        _parser.advance();
    }

    return new poListNode(poNodeType::WHILE, children, whileStatement);
}

poNode* poFunctionParser::parseFor()
{
    std::vector<poNode*> children;

    auto& forStatement = _parser.peek();
    if (_parser.match(poTokenType::FOR))
    {
        _parser.advance();
        if (_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.advance();

            if (_parser.match(poTokenType::SEMICOLON))
            {
                _parser.advance();
            }
            else
            {
                children.push_back(parseStatement());
            }

            poNode* equality = parseExpression();
            if (!_parser.match(poTokenType::SEMICOLON))
            {
                _parser.setError("Expected semicolon.");
                return nullptr;
            }
            _parser.advance();

            poNode* stride = new poUnaryNode(poNodeType::STRIDE, parseExpressionStatement(), forStatement);
            if (!_parser.match(poTokenType::CLOSE_PARAN))
            {
                _parser.setError("Expected close parenthesis.");
                return nullptr;
            }
            _parser.advance();

            if (!_parser.match(poTokenType::OPEN_BRACE))
            {
                _parser.setError("Expected open brace.");
                return nullptr;
            }
            poNode* body = parseBody(true);

            if (!_parser.match(poTokenType::CLOSE_BRACE))
            {
                _parser.setError("Expected close brace.");
                return nullptr;
            }
            _parser.advance();

            std::vector<poNode*> loopChildren = {
                body,
                equality,
                stride
            };

            poListNode* loopNode = new poListNode(poNodeType::WHILE, loopChildren, forStatement);
            children.push_back(loopNode);
        }
    }

    return new poUnaryNode(poNodeType::STATEMENT, new poListNode(poNodeType::BODY, children, forStatement), forStatement);
}

poNode* poFunctionParser::insertCompare(poNode* node)
{
    poToken expr = node->token();
    poNode* compare = new poBinaryNode(poNodeType::CMP_EQUALS,
        node,
        new poConstantNode(poNodeType::CONSTANT, poToken(
            poTokenType::TRUE,
            expr.string(),
            expr.line(),
            expr.column(),
            expr.fileId())),
        expr);
    return compare;
}

bool poFunctionParser::evaluateNeedsFixup(poNode* node)
{
    if (node->type() == poNodeType::CMP_EQUALS ||
        node->type() == poNodeType::CMP_NOT_EQUALS ||
        node->type() == poNodeType::CMP_LESS ||
        node->type() == poNodeType::CMP_GREATER ||
        node->type() == poNodeType::CMP_LESS_EQUALS ||
        node->type() == poNodeType::CMP_GREATER_EQUALS ||
        node->type() == poNodeType::AND ||
        node->type() == poNodeType::OR)
    {
        return false;
    }

    return true;
}

void poFunctionParser::fixupExpression(poNode* node)
{
    if (node->type() == poNodeType::AND ||
        node->type() == poNodeType::OR)
    {
        poBinaryNode* binary = static_cast<poBinaryNode*>(node);
        if (evaluateNeedsFixup(binary->left()))
        {
            poNode* compare = insertCompare(binary->left());
            binary->setLeft(compare);
        }
        if (evaluateNeedsFixup(binary->right()))
        {
            poNode* compare = insertCompare(binary->right());
            binary->setRight(compare);
        }

        fixupExpression(binary->left());
        fixupExpression(binary->right());
    }
}

poNode* poFunctionParser::parseIfStatement(const bool isLoop)
{
    std::vector<poNode*> children;

    auto& ifStatement = _parser.peek();
    if (_parser.match(poTokenType::IF))
    {
        auto& expr = _parser.peek();
        _parser.advance();
        if (_parser.match(poTokenType::OPEN_PARAN))
        {
            _parser.advance();

            poNode* equality = parseExpression();
            if (equality)
            {
                fixupExpression(equality);
                if (evaluateNeedsFixup(equality))
                {
                    poNode* compare = insertCompare(equality);
                    equality = compare;
                }
                children.push_back(new poUnaryNode(poNodeType::STATEMENT, equality, expr));
            }

            if (_parser.match(poTokenType::CLOSE_PARAN))
            {
                _parser.advance();
            }
        }
        else
        {
            _parser.setError("Expected parenthesis.");
        }

        if (_parser.match(poTokenType::OPEN_BRACE))
        {
            children.push_back(parseBody(isLoop));
        }
        else
        {
            _parser.setError("Expected brace.");
        }

        if (_parser.match(poTokenType::CLOSE_BRACE))
        {
            _parser.advance();
            if (_parser.match(poTokenType::ELSE))
            {
                _parser.advance();
                if (_parser.match(poTokenType::IF))
                {
                    children.push_back(new poUnaryNode(poNodeType::ELSE,
                        parseIfStatement(isLoop),
                        expr));
                }
                else if (_parser.match(poTokenType::OPEN_BRACE))
                {
                    children.push_back(new poUnaryNode(poNodeType::ELSE,
                        parseBody(isLoop),
                        expr));
                    if (_parser.match(poTokenType::CLOSE_BRACE))
                    {
                        _parser.advance();
                    }
                    else
                    {
                        _parser.setError("Expected brace.");
                    }
                }
            }
        }
        else
        {
            _parser.setError("Expected parenthesis.");
        }
    }

    return new poListNode(poNodeType::IF, children, ifStatement);
}

const int poFunctionParser::parsePointer()
{
    int pointerCount = 0;
    while (_parser.match(poTokenType::STAR))
    {
        // pointer
        _parser.advance();
        pointerCount++;
    }
    return pointerCount;
}

poNode* poFunctionParser::parseDecl(const poToken& type)
{
    poNode* statement = nullptr;

    std::vector<poNode*> generic;
    if (_parser.match(poTokenType::LESS))
    {
        _parser.parseGeneric(poGenericType::VARIABLE, generic);
    }

    const int pointerCount = parsePointer();

    int64_t arraySize = 0;
    bool isArray = false;
    if (_parser.match(poTokenType::OPEN_BRACKET))
    {
        _parser.advance();
        if (_parser.match(poTokenType::I64))
        {
            arraySize = _parser.peek().i64();
            _parser.advance();

            if (_parser.match(poTokenType::CLOSE_BRACKET))
            {
                isArray = true;

                _parser.advance();
            }
            else
            {
                _parser.setError("Expected close bracket.");
            }
        }
        else
        {
            _parser.setError("Expected array size.");
        }
    }

    // variable decl
    if (_parser.match(poTokenType::IDENTIFIER))
    {
        const auto& id = _parser.peek();
        _parser.advance();

        poNode* variable = new poNode(poNodeType::VARIABLE, id);
        if (generic.size() > 0)
        {
            variable = new poGenericNode(variable, generic, type);
        }
        if (pointerCount > 0)
        {
            variable = new poPointerNode(poNodeType::POINTER, variable, id, pointerCount);
        }
        if (isArray)
        {
            variable = new poArrayNode(arraySize, 
                    variable,
                    poNodeType::ARRAY, id);
        }

        if (_parser.match(poTokenType::SEMICOLON) ||
            _parser.match(poTokenType::OPEN_PARAN))
        {
            if (_parser.match(poTokenType::OPEN_PARAN))
            {
                _parser.advance();

                // constructor?
                std::vector<poNode*> args;
                if (!_parser.match(poTokenType::CLOSE_PARAN))
                {
                    poNode* node = parseTerm();
                    if (node)
                    {
                        args.push_back(node);
                        while (_parser.match(poTokenType::COMMA))
                        {
                            _parser.advance();
                            args.push_back(parseTerm());
                        }
                    }
                }

                if (_parser.match(poTokenType::CLOSE_PARAN))
                {
                    _parser.advance();

                    poListNode* argsNode = new poListNode(poNodeType::CALL, args, type);
                    std::vector<poNode*> constructor = {
                        argsNode, variable
                    };

                    // end
                    poNode* decl = new poUnaryNode(poNodeType::DECL,
                        new poListNode(poNodeType::CONSTRUCTOR, constructor, type),
                        type);
                    statement = new poUnaryNode(poNodeType::STATEMENT, decl, type);
                }
                else
                {
                    _parser.setError("Expected parenthesis.");
                }
            }
            else
            {
                // end
                if (type.token() == poTokenType::IDENTIFIER && pointerCount == 0)
                {
                    poListNode* argsNode = new poListNode(poNodeType::CALL, std::vector<poNode*>(), type);
                    std::vector<poNode*> constructor = {
                        variable, argsNode
                    };
                    poNode* decl = new poUnaryNode(poNodeType::DECL,
                        new poListNode(poNodeType::CONSTRUCTOR, constructor, type),
                        type);
                    statement = new poUnaryNode(poNodeType::STATEMENT, decl, type);
                }
                else
                {
                    poNode* decl = new poUnaryNode(poNodeType::DECL,
                        variable,
                        type);
                    statement = new poUnaryNode(poNodeType::STATEMENT, decl, type);
                }
            }
        }
        else
        {
            poNode* lhs = variable;
            poNode* assign = parseRH(lhs);
            if (assign)
            {
                poNode* decl = new poUnaryNode(poNodeType::DECL,
                    assign,
                    type);
                statement = new poUnaryNode(poNodeType::STATEMENT, decl, type);
            }
            else
            {
                _parser.setError("Assignment node error.");
            }
        }
    }
    else
    {
        _parser.setError("Expected identifier.");
    }

    return statement;
}

poNode* poFunctionParser::parseExpressionStatement()
{
    auto& id = _parser.peek();
    _parser.advance();

    if (_parser.match(poTokenType::DOT))
    {
        poNode* member = parseMember(new poNode(poNodeType::VARIABLE, id), id);
        if (_parser.match(poTokenType::EQUALS) ||
            _parser.match(poTokenType::PLUS_EQUALS) ||
            _parser.match(poTokenType::MINUS_EQUALS) ||
            _parser.match(poTokenType::STAR_EQUALS) ||
            _parser.match(poTokenType::SLASH_EQUALS))
        {
            // assignment
            poNode* assign = parseRH(member);
            return new poUnaryNode(poNodeType::STATEMENT, assign, id);
        }
        else
        {
            _parser.setError("Unexpected token.");
        }
    }
    else if (_parser.match(poTokenType::EQUALS) ||
        _parser.match(poTokenType::PLUS_EQUALS) ||
        _parser.match(poTokenType::MINUS_EQUALS) ||
        _parser.match(poTokenType::STAR_EQUALS) ||
        _parser.match(poTokenType::SLASH_EQUALS))
    {
        // assignment
        poNode* assign = parseRH(new poNode(poNodeType::VARIABLE, id));
        return new poUnaryNode(poNodeType::STATEMENT, assign, id);
    }
    else if (_parser.match(poTokenType::OPEN_PARAN))
    {
        // call
        _parser.advance();
        poNode* node = new poUnaryNode(poNodeType::STATEMENT, parseCall(id), id);
